Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23833

Period size in the pulse audio plugin for QAudioInput is not set correctly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • None
    • 5.0.0
    • Multimedia
    • dcf79d4998cd106a5ebc62ab213fa954f79c388d

    Description

      In the pulse audio plugin for QAudioInput, period size is 20 ms converted to bytes for the current format. Period size should correspond to how much a period takes up in pulse audio in order to have any value in working with latency.

      Possible candidate for period size is the pa_buffer_attr::fragsize value, obtainable from pa_stream_get_buffer_attr().

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lzelensk Lev Zelenskiy
            jorabbe Jonas Rabbe (closed Nokia identity) (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes