Read actual period size after initializing a stream.

QTBUG-23833

Change-Id: I2bd352cf34d12e1be22f640c47fc2388dc3a7f8a
Reviewed-by: Michael Goddard <michael.goddard@nokia.com>